refactor: ♻️ Fixes some quality issues